--- a/style.css
+++ b/style.css
@@ -222,6 +222,11 @@ input:focus {
     min-width: 200px;
 }
 
+.card:hover {
+	scale: 1.03;
+	transition: 0.5s ease;
+}
+
 .card-close {
     border: none;
     font-size: 2rem;
@@ -252,4 +257,24 @@ input:focus {
 .card .span-notread {
     font-size: 1.5rem;
     color: #e9112e;
+}
+
+.span-read:hover,
+.span-notread:hover{
+    color:white;
+}
+
+.bx.bx-window-close:hover{
+    color:rgb(192, 172, 60);
+    transition: 0.2s ease;
+}
+
+ul:hover{
+    transform:scale(1.12);
+    transition: 0.2s ease;
+}
+
+.top-text:hover,.middle-text:hover,.bottom-text:hover{
+    transform:scale(1.12);
+    transition: 0.4s ease;
 }
