--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ dialog {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 35%;
+    min-width: 25%;
+    max-width: 350px;
     min-height: 50%;
     border-radius: 25px;
     background-color: white;
@@ -192,7 +193,7 @@ dialog .user-input {
     color: rgb(136, 120, 97);
     position: relative;
     left: 80%;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 input:focus {
